<resources>
    <string name="pref_default_text_encoding_default">Auto-detector</string>
    <string name="delete_folder_warning">Delete folder \"%s\"?</string>
    <string name="contextmenu_savelinkbookmark">Save link as bookmark</string>
    <string name="pref_default_text_encoding_default_choice">auto-detector</string>
    <string name="download_path_unavailable_dlg_title">Download Directory Unavailable</string>
    <string name="download_path_unavailable_dlg_msg">Please modify the Download Directory of Browser</string>
    <string name="dump_counters">Dump V8 counters</string>
    <string name="instant_base">http://www.google.com/webhp?client={CID}&amp;source=android-instant&amp;ion=1</string>
    <string name="home">Home</string>
    <string name="close">Close</string>
    <string name="option">Option</string>
    <string name="minimize">Minimize</string>
    <string name="quit">Quit</string>
    <string name="pref_download_title">Download settings</string>
    <string name="pref_extras_set_download_directory_title">Set download directory</string>
    <string name="homepage_base_site_navigation">content://com.android.browser.site_navigation/websites</string>
    <string name="sitenavigation_add">Add website</string>
    <string name="tab_site_navigation">Site navigation</string>
    <string name="permlab_readHomepage">read homepage in browser</string>
    <string name="permdesc_readHomepage">Allows the application to read homepage information in browser without your intervention.</string>
    <string name="permlab_writeHomepage">modify homepage in browser</string>
    <string name="permdesc_writeHomepage">Allows the application to modify homepage information in browser without your intervention.</string>
    <string name="duplicated_bookmark">Duplicated bookmark</string>
    <string name="duplicated_bookmark_warning">The bookmark has same name or location already exists, overwrite?</string>
    <string name="duplicated_folder_warning">The folder has same name already exists.</string>
    <string name="pref_content_search_engine_consistency">Search engine consistency</string>
    <string name="pref_search_engine_unify">Unify search engine</string>
    <string name="pref_search_engine_unify_summary">Apply the change of search engine to QuickSearchBox</string>
    <string name="download_or_open_content">Which operation do you select?</string>
    <string name="save_content">Save</string>
    <string name="open_content">Open</string>
    <string name="no_voice_search_alert_dialog_title">Voice Search</string>
    <string name="no_voice_search_alert_dialog_msg">The voice search is not available, due to there is no voice search application. Please install it first.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete_site_navigation_msg">Delete this item?</string>
    <string name="site_navigation_name">Name</string>
    <string name="site_navigation_address">Address</string>
    <string name="website_needs_title">Website must have a name.</string>
    <string name="website_needs_url">Website must have a location.</string>
    <string name="site_navigation_cannot_save_url">This URL cannot be website.</string>
    <string name="add_site_navigation">Add Website</string>
    <string name="edit_site_navigation">Edit Site Navigation</string>
    <string name="site_navigation_edit_button">Edit</string>
    <string name="save_webpage">Save</string>
    <string name="duplicate_site_navigation_url">This URL has already existed.</string>
    <string name="duplicate_site_navigation_title">This lable has already existed.</string>
    <string name="max_input_browser_search">Your input has reached the max limit.</string>
    <string name="max_input_browser_search_title">Input limit</string>
    <string name="max_input_browser_search_button">OK</string>
    <string name="bookmarks_history">Bookmarks/History</string>
    <string name="save_bookmark">Save bookmark</string>
    <string name="tabs">Tab</string>
    <string name="open_saved_page_failed">Can\'t open saved page.</string>
    <string name="saved_page_failed">Failed to save web page.</string>
    <string name="saved_page_complete">Download complete.</string>
    <string name="saved_page_fail">Failed to save </string>
    <string name="create_folder_fail">Can\'t create save page folder</string>
    <string name="saving_page">Saving web page</string>
    <string name="need_login_email">Please register your Email account first.</string>
    <string name="folder_needs_title">Folder must have a name.</string>
    <string name="denied_required_permission">Permissions denied. You can change them in Settings &gt; Apps.</string>
    <string name="saving_snapshot">Saving…</string>
    <string name="pref_allow_apptabs">Allow multiple tabs per app</string>
    <string name="pref_link_prefetch_title">Web page preloading</string>
    <string name="pref_link_prefetch_summary">Allow browser to preload linked web pages in the background</string>
    <string name="pref_link_prefetch_dialogtitle">Web page preloading</string>
    <string name="other_bookmarks">Other Bookmarks</string>
    <string name="application_name">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New tab</string>
    <string name="new_incognito_tab">New incognito tab</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="added_to_bookmarks">Added to bookmarks.</string>
    <string name="removed_from_bookmarks">Removed from bookmarks.</string>
    <string name="sign_in_to" formatted="false">Sign in to %s1 \"%s2\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_add_page">Save bookmark</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bar_loading">Loading…</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_go_back">Go back</string>
    <string name="ssl_untrusted">This certificate isn\'t from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site doesn\'t match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate isn\'t valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping…</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Save to bookmarks</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Saved to bookmarks.</string>
    <string name="bookmark_not_saved">Couldn\'t save bookmark.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_needs_title">Bookmark must have a name.</string>
    <string name="bookmark_needs_url">Bookmark must have a location.</string>
    <string name="bookmark_url_not_valid">This URL isn\'t valid.</string>
    <string name="bookmark_cannot_save_url">This URL can\'t be bookmarked.</string>
    <string name="bookmark_page">Bookmark last-viewed page</string>
    <string name="bookmark_thumbnail_view">Thumbnails</string>
    <string name="bookmark_list_view">List</string>
    <string name="current_page">from </string>
    <string name="delete_bookmark_warning">Delete bookmark \"%s\"?</string>
    <string name="open_all_in_new_window">Open all in new tabs</string>
    <string name="goto_dot">Go</string>
    <string name="select_dot">Select text</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="shortcut_bookmark_title">Choose a bookmark</string>
    <string name="history">History</string>
    <string name="menu_view_download">Downloads</string>
    <string name="copy_page_url">Copy page URL</string>
    <string name="share_page">Share page</string>
    <string name="menu_save_snapshot">Save for offline reading</string>
    <string name="snapshot_failed">Couldn\'t save for offline reading.</string>
    <string name="contextheader_folder_bookmarkcount">%d bookmarks</string>
    <string name="contextheader_folder_empty">Empty folder</string>
    <string name="contextmenu_openlink">Open</string>
    <string name="contextmenu_openlink_newwindow">Open in new tab</string>
    <string name="pref_content_homepage">Set homepage</string>
    <string name="pref_general_autofill_title">Auto-fill</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <string name="pref_min_font_size">Minimum font size</string>
    <string name="pref_text_zoom">Text scaling</string>
    <string name="pref_zoom_on_double_tap">Zoom on double-tap</string>
    <string name="pref_font_size_category">Text size</string>
    <string name="search_hint">Search or type URL</string>
    <string name="preview">Preview</string>
    <string name="accessibility_button_stop">Stop page load</string>
    <string name="accessibility_button_voice">Start voice search</string>
    <string name="accessibility_button_bookmarks">Bookmarks</string>
    <string name="accessibility_button_newtab">Open new tab</string>
    <string name="accessibility_button_clear">Clear input</string>
    <string name="accessibility_button_navscreen">Page manager</string>
    <string name="accessibility_button_more">More options</string>
</resources>