<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.browser.preferences.NonformattingListPreference
        android:entries="@array/pref_homepage_choices_site_navigation"
        android:title="@string/pref_content_homepage"
        android:key="homepage_picker"
        android:entryValues="@array/pref_homepage_values_site_navigation"/>
    <PreferenceCategory
        android:title="@string/pref_general_autofill_title"
        android:key="general_autofill_title">
        <CheckBoxPreference
            android:title="@string/pref_autofill_enabled"
            android:key="autofill_enabled"
            android:summary="@string/pref_autofill_enabled_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
