<?xml version="1.0" encoding="utf-8"?>
<com.android.browser.NavigationBarPhone xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/bg_urlbar">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/title_bg"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/magnify"
            android:paddingLeft="4dp"
            android:paddingRight="8dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_category_suggest"/>
        <ImageView
            android:id="@+id/incognito_icon"
            android:paddingLeft="4dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_incognito_holo_dark"/>
        <FrameLayout
            android:id="@+id/iconcombo"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/page_info"
            style="@style/HoloButton">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/favicon"
                android:paddingLeft="4dp"
                android:paddingRight="8dp"
                android:layout_width="32dp"
                android:layout_height="32dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/lock"
                android:visibility="gone"
                android:layout_width="32dp"
                android:layout_height="32dp"/>
        </FrameLayout>
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/stop"
            android:paddingLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_stop_holo_dark"
            android:contentDescription="@string/accessibility_button_stop"
            style="@style/HoloButton"/>
        <com.android.browser.UrlInputView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#c0c0c0"
            android:textColorHint="#c0c0c0"
            android:ellipsize="end"
            android:id="@+id/url"
            android:background="@null"
            android:focusable="true"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="24dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/search_hint"
            android:lines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:maxLength="2048"
            android:layout_weight="1"
            android:inputType="textUri"
            android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionGo"
            style="@style/Suggestions"/>
        <ImageView
            android:id="@+id/voice"
            android:paddingRight="4dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_voice_search_holo_dark"
            android:contentDescription="@string/accessibility_button_voice"
            style="@style/HoloButton"/>
        <ImageView
            android:id="@+id/clear"
            android:paddingRight="4dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_close_window_holo_dark"
            android:contentDescription="@string/accessibility_button_clear"
            style="@style/HoloButton"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/tab_switcher"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_windows_holo_dark"
        android:contentDescription="@string/accessibility_button_navscreen"
        style="@style/HoloButton"/>
    <ImageButton
        android:gravity="center_vertical"
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_menu_overflow"
        android:contentDescription="@string/accessibility_button_more"
        style="@style/HoloButton"/>
</com.android.browser.NavigationBarPhone>
