<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/crumb_holder"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall">
        <com.android.browser.BreadCrumbView
            android:id="@+id/crumbs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <View
            android:id="@+id/add_divider"
            android:background="?android:attr/dividerVertical"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/add_new_folder"
            android:background="?android:attr/selectableItemBackground"
            android:paddingRight="8dp"
            android:focusable="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_folder"
            android:drawableLeft="@drawable/ic_add_string"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/title_holder"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/fake_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bookmark_this_page"
            android:drawableLeft="@drawable/ic_bookmark_on_holo_dark"
            android:layout_weight="1"/>
        <View
            android:id="@+id/remove_divider"
            android:background="?android:attr/dividerVertical"
            android:visibility="gone"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/remove"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:drawableLeft="@drawable/trashcan"
            style="@style/HoloButton"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableLayout
                android:id="@+id/default_view"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:shrinkColumns="1">
                <TableRow android:layout_marginBottom="10dp">
                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/titleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                    <EditText
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:ellipsize="end"
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:inputType="textNoSuggestions"/>
                </TableRow>
                <TableRow
                    android:id="@+id/row_address"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/addressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"/>
                    <EditText
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:ellipsize="end"
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/http"
                        android:inputType="textUri"/>
                </TableRow>
                <TableRow android:layout_marginBottom="10dp">
                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account"/>
                    <Spinner
                        android:id="@+id/accounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:spinnerMode="dropdown"/>
                </TableRow>
                <TableRow android:layout_marginBottom="10dp">
                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/containing_folder"/>
                    <view
                        android:id="@+id/folder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:spinnerMode="dropdown"
                        class="com.android.browser.addbookmark.FolderSpinner"/>
                </TableRow>
            </TableLayout>
        </ScrollView>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/folder_selector"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <view
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                class="com.android.browser.AddBookmarkPage$CustomListView"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic"
                android:id="@+id/empty"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_subfolders"/>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_gravity="right"
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/do_not_save"
            android:maxLines="2"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_gravity="left"
            android:id="@+id/OK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:maxLines="2"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</merge>
