<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_screen"
    android:background="@drawable/browser_background_holo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.android.browser.NavTabScroller
        android:orientation="vertical"
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:gravity="right"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:id="@+id/tabbar"
        android:background="#cc0d0d0d"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <ImageButton
            android:gravity="center_vertical"
            android:id="@+id/newtab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_new_window_holo_dark"
            android:contentDescription="@string/accessibility_button_newtab"
            style="@style/HoloButton"/>
        <ImageButton
            android:id="@+id/bookmarks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_bookmarks_history_holo_dark"
            android:contentDescription="@string/accessibility_button_bookmarks"
            style="@style/HoloButton"/>
        <ImageButton
            android:gravity="center_vertical"
            android:id="@+id/more"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_overflow"
            android:contentDescription="@string/accessibility_button_more"
            style="@style/HoloButton"/>
    </LinearLayout>
</RelativeLayout>
